--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
-    <string name="app_name">uts pmo</string>
+    <string name="app_name">MyApp</string>
+
+    <!-- Array untuk judul item -->
+    <string-array name="item_titles">
+        <item>Title 1</item>
+        <item>Title 2</item>
+        <item>Title 3</item>
+    </string-array>
+
+    <!-- Array untuk deskripsi item -->
+    <string-array name="item_descriptions">
+        <item>Description 1</item>
+        <item>Description 2</item>
+        <item>Description 3</item>
+    </string-array>
 </resources>
