--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,16 +4,5 @@
     <string name="detail_title">Detail Title</string>
     <string name="item_title">Item Title</string>
     <string name="item_description">Item Description</string>
-
-    <string-array name="item_titles">
-        <item>Title 1</item>
-        <item>Title 2</item>
-        <item>Title 3</item>
-    </string-array>
-
-    <string-array name="item_descriptions">
-        <item>Description 1</item>
-        <item>Description 2</item>
-        <item>Description 3</item>
-    </string-array>
+    <string name="item_image">Item Image</string>
 </resources>
