add coach card update icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Gregor Manifest</string>
+    <string name="app_name">BVB 09</string>
     <string name="detail_description">Detail Description</string>
     <string name="detail_title">Detail Title</string>
     <string name="item_title">Item Title</string>
